--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perinci-Access-HTTP-Server
 
+0.24     2013-03-01 (SHARYANTO)
+
+         No functional changes.
+
+         [BUG FIXES]
+
+         - Avoid perl undef warning when uri/action Riap keys are not defined.
+
+
 0.23     2013-03-01 (SHARYANTO)
 
          [BUG FIXES]
@@ -23,7 +32,7 @@ Revision history for Perinci-Access-HTTP-Server
 
          [ETC]
 
-         - Add example script (auth.psgi).
+         - Add example scripts (auth.psgi, authz.psgi).
 
 
 0.21     2012-08-10 (SHARYANTO)
