--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Perinci::Access::HTTP::Server - PSGI application to implement Riap::HTTP
 
 VERSION
-    version 0.30
+    version 0.31
 
 SYNOPSIS
 DESCRIPTION
@@ -129,7 +129,7 @@ FAQ
 
   I want to support new actions.
     Normally you'll need to extend the appropriate Riap clients (e.g.
-    Perinci::Access::InProcess for this. Again, note that you don't have to
+    Perinci::Access::Schemeless for this. Again, note that you don't have to
     resort to subclassing just to accomplish this. You can inject the
     action_ACTION() method from somewhere else.
 
