--- a/README
+++ b/README
@@ -2,7 +2,9 @@ NAME
     Perinci::Access::HTTP::Server - PSGI application to implement Riap::HTTP
 
 VERSION
-    version 0.40
+    This document describes version 0.41 of Perinci::Access::HTTP::Server
+    (from Perl distribution Perinci-Access-HTTP-Server), released on
+    2014-04-30.
 
 SYNOPSIS
 DESCRIPTION
